# jp-edge-tts

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build-log.txt  build.bat  build.sh  vs2022.bat
cmake/: Config.cmake.in  ConfigVersion.cmake.in  MeCab.cmake  jp_edge_tts_config.cmake.in
examples/benchmark/: benchmark.cpp
examples/cli/: main.cpp
examples/simple/: simple_tts.cpp
include/jp_edge_tts/: config.h  jp_edge_tts_c_api.h  types.h
include/jp_edge_tts/audio/: audio_processor.h  wav_writer.h
include/jp_edge_tts/core/: cache_manager.h  session_manager.h  tts_engine.h  voice_manager.h
include/jp_edge_tts/phonemizer/: dictionary_lookup.h  japanese_phonemizer.h  phonemizer_onnx.h
include/jp_edge_tts/tokenizer/: ipa_tokenizer.h  mecab_wrapper.h  vocab_manager.h
include/jp_edge_tts/utils/: file_utils.h  string_utils.h  thread_pool.h
models/: tokenizer_vocab.json
models/voices/: jf_alpha.json  jf_gongitsune.json  jf_nezumi.json  jf_tebukuro.json  jm_kumo.json  manifest.json
python/: requirements.txt  train.py  train_phonemizer.py
src/: jp_edge_tts_c_api.cpp
src/audio/: audio_processor.cpp  wav_writer.cpp
src/core/: cache_manager.cpp  session_manager.cpp  tts_engine.cpp  voice_manager.cpp
src/phonemizer/: dictionary_lookup.cpp  japanese_phonemizer.cpp  phonemizer_onnx.cpp
src/tokenizer/: ipa_tokenizer.cpp  mecab_wrapper.cpp  vocab_manager.cpp
src/utils/: file_utils.cpp  string_utils.cpp  thread_pool.cpp
tests/: test_audio.cpp  test_phonemizer.cpp  test_tokenizer.cpp
